更新了几个基本方法

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(spare_matrix matrixLibrary/SparseMatrix.hpp)
 add_executable(matrix matrixLibrary/Matrix.hpp matrixTest/MatrixTest.cpp)
 add_executable(matrix_convolution matrixLibrary/MatrixConvolution.hpp matrixTest/MatrixConvolutionTest.cpp)
 add_executable(reshape matrixLibrary/Reshape.hpp matrixTest/ReshapeTest.cpp)
+add_executable(complex matrixLibrary/ComplexMatrix.hpp)
